--- a/src/45-shaders/42-explosion/index.html
+++ b/src/45-shaders/42-explosion/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <script src='/node_modules/three127/build/three.js'></script>
-  <script src='../libs/MyShaderChunks.js'></script>
+  <script src='/libs/MyShaderChunks.js'></script>
   <script src="main.js" type="module"></script>
 
 </body>
