--- a/src/45-shaders/ghost-mouse/index.html
+++ b/src/45-shaders/ghost-mouse/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
 <script id="vertexShader" type="x-shader/x-vertex">
     void main() {
@@ -115,8 +115,8 @@ vec3 blur(sampler2D sp, vec2 uv, vec2 scale) {
 
 
 <div id="container" touch-action="none"></div>
-<!-- partial -->
-  <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/982762/ccapture.js'></script><script  src="./script.js"></script>
+
+<script  src="./script.js"></script>
 
 </body>
 </html>
