--- a/src/45-shaders/infinite-zoom/index.html
+++ b/src/45-shaders/infinite-zoom/index.html
@@ -7,16 +7,13 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
+
 <script id="vertexShader" type="x-shader/x-vertex">
     void main() {
         gl_Position = vec4( position, 1.0 );
     }
 </script>
 <script id="fragmentShader" type="x-shader/x-fragment">
-  
-  
     uniform vec2 u_resolution;
     uniform vec2 u_mouse;
     uniform float u_time;
@@ -188,8 +185,8 @@
 
 
 <div id="container"></div>
-<!-- partial -->
-  <script  src="./script.js"></script>
+
+<script  src="script.js" type="module"></script>
 
 </body>
 </html>
