--- a/src/45-shaders/mountains-of-madness/index.html
+++ b/src/45-shaders/mountains-of-madness/index.html
@@ -7,8 +7,6 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
 <script id="vertexShader" type="x-shader/x-vertex">
     void main() {
         gl_Position = vec4( position, 1.0 );
@@ -370,8 +368,9 @@
 
 
 <div id="container" touch-action="none"></div>
-<!-- partial -->
-  <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/982762/ccapture.js'></script><script  src="./script.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
+<script  src="./script.js"></script>
 
 </body>
 </html>
