--- a/src/45-shaders/mountains-of-madness/index.html
+++ b/src/45-shaders/mountains-of-madness/index.html
@@ -369,8 +369,7 @@
 
 <div id="container" touch-action="none"></div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
-<script  src="./script.js"></script>
+<script  src="script.js" type="module"></script>
 
 </body>
 </html>
