--- a/src/45-shaders/primordial-soup/index.html
+++ b/src/45-shaders/primordial-soup/index.html
@@ -7,8 +7,6 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
 <script id="vertexShader" type="x-shader/x-vertex">
     void main() {
         gl_Position = vec4( position, 1.0 );
@@ -138,8 +136,8 @@
 
 
 <div id="container"></div>
-<!-- partial -->
-  <script  src="./script.js"></script>
+
+<script  src="script.js" type="module"></script>
 
 </body>
 </html>
