--- a/src/45-shaders/psychedelic-waves/index.html
+++ b/src/45-shaders/psychedelic-waves/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+
 <div class="world"></div>
 <div class="title">
 	<p>Looking at these waves for 1 minute<br/>will bring you 56% more serenity*</p>
@@ -207,9 +207,8 @@
 		gl_Position = pos;
 	}
 </script>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/86/three.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.5/dat.gui.min.js'></script><script  src="./script.js"></script>
+
+<script  src="script.js" type="module"></script>
 
 </body>
 </html>
