--- a/src/45-shaders/psychedelic-waves/index.html
+++ b/src/45-shaders/psychedelic-waves/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="world"></div>
+<div id="container"></div>
 <div class="title">
 	<p>Looking at these waves for 1 minute<br/>will bring you 56% more serenity*</p>
 <p class="remark">* According to a very serious and reliable study conducted by myself.</p>
