--- a/src/45-shaders/raging-sea/index.html
+++ b/src/45-shaders/raging-sea/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+
 <script id="vertexShader" type="x-shader/x-vertex">
   #include <fog_pars_vertex>
 
@@ -150,10 +150,11 @@ void main() {
 }
 </script>
 <canvas class="webgl"></canvas>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r125/three.min.js'></script>
-<script src='https://unpkg.com/three@0.125.2/examples/js/controls/OrbitControls.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js'></script><script  src="./script.js"></script>
+
+<!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r125/three.min.js'></script>
+<script src='https://unpkg.com/three@0.125.2/examples/js/controls/OrbitControls.js'></script> -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js'></script>
+<script  src="script.js" type="module"></script>
 
 </body>
 </html>
