--- a/src/45-shaders/snowfall/index.html
+++ b/src/45-shaders/snowfall/index.html
@@ -168,8 +168,7 @@
 
 <div id="container" touch-action="none"></div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/982762/ccapture.js'></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script> -->
 <script  src="script.js" type="module"></script>
 
 </body>
