--- a/src/45-shaders/34-wood-texture/index.html
+++ b/src/45-shaders/34-wood-texture/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Shaders</title>
+  <title>three.js shader example - wood grain</title>
+  <meta charset="utf-8">
+  <style>
+    body {
+      background-color: #000000;
+    }
+  </style>
+
 </head>
 
 <body>
 
-  <script src='/node_modules/three127/build/three.js'></script>
-  <script src='/libs/ShaderChunks.js'></script>
   <script src="main.js" type="module"></script>
 
 </body>
