--- a/src/45-shaders/38-bricks/index.html
+++ b/src/45-shaders/38-bricks/index.html
@@ -4,11 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Shaders</title>
+  <style>
+    body {
+      background-color: #000000;
+    }
+  </style>
 </head>
 
 <body>
 
-  <script src='/node_modules/three127/build/three.js'></script>
   <script src="main.js" type="module"></script>
 
 </body>
