--- a/src/90-examples/dreaming-of-jupiter/index.html
+++ b/src/90-examples/dreaming-of-jupiter/index.html
@@ -11,11 +11,9 @@
 
 <body>
   <!-- https://codepen.io/isladjan/pen/zYqLxeG -->
-  <div id="canvas_container"></div>
-  <button id="fullscr">Go Fullscreen</button>
 
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r120/three.min.js'></script>
-  <script src="./script.js"></script>
+  <div id="container"></div>
+  <script src="script.js" type="module"></script>
 
 </body>
 
