--- a/src/90-examples/offroadJS/index.html
+++ b/src/90-examples/offroadJS/index.html
@@ -13,7 +13,7 @@
   <aside id="instructions-container">
     <div id="instructions">
       <h1>Instructions</h1>
-      <i id="instructions-close-button">×</i>
+      <i id="close-button">×</i>
       <p>
         Accelerate: <span>W</span> / <span>S</span>
       </p>
@@ -47,7 +47,7 @@
     </div>
   </aside>
   
-  <script src="lib/cannon.min.js"></script>
+  <script src="/libs/cannon.min.js"></script>
   <script src="main.js" type="module"></script>
 </body>
 
