--- a/src/15-animation/12-trigonometry-animation/index.html
+++ b/src/15-animation/12-trigonometry-animation/index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-  <canvas id="canvas" width="800" height="600"></canvas>
-  <script src="napredno.js" type="module"></script>
+  <canvas id="canvas"></canvas>
+  <script src="main.js" type="module"></script>
 </body>
 
 </html>
