--- a/src/15-animation/dark-city/index.html
+++ b/src/15-animation/dark-city/index.html
@@ -9,12 +9,13 @@
 
 <body>
 
+  <!-- https://codepen.io/MAKIO135/pen/vmBzMv -->
   <div id="container"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
   <script src="https://unpkg.com/three@0.85.0/build/three.min.js"></script>
 
-  <script src="./script.js"></script>
+  <script src="script.js"></script>
 
 </body>
 
