--- a/src/15-animation/fractal-planet/index.html
+++ b/src/15-animation/fractal-planet/index.html
@@ -1,64 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Threejs: fractal planet</title>
-  <link rel="stylesheet" href="./style.css">
-
 </head>
+
 <body>
 
-<div id="container"></div>
-  
-  <script type="x-shader/x-vertex" id="vertexShader">
-  varying vec2 vUv;
+  <!-- https://codepen.io/AixDen/pen/mdVXeaP -->
 
-	void main() {
+  <div id="container"></div>
 
-		vUv = uv;
-		gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
-
-	}
-  </script>
-
-  <script type="x-shader/x-vertex" id="fragmentShader">
-  varying vec2 vUv;
-	uniform float u_time;
-
-	float julia(vec2 z, vec2 c) {
-		for(float i = 0.0; i < 1e2; i++) {
-			float xx = z.x*z.x, yy = z.y*z.y, zz = xx + yy;
-			if (zz > 10.0){return 100.0;}
-			float re = c.x*z.x + c.y*z.y + xx*xx - yy*yy ;
-			float im = c.y*z.x - c.x*z.y + 2.0*z.x*z.y*zz ;
-			z = vec2(re, im)/zz;
-		}
-		return 0.0 ;
-	}
-
-	void main() {
-		float pi = 3.14159265359 ;
-		float elevation = (vUv.y-0.5)*pi ;
-		float azimuth = vUv.x*2.0*pi ;
-		float Z = sin(elevation) ;
-		float cosel = cos(elevation) ; 
-		float X = cosel*cos(azimuth) ;
-		float Y = cosel*sin(azimuth) ;
-		vec2 coord = vec2(X/(1.-Z),Y/(1.-Z)) ;
-
-		coord = sqrt(0.1)*coord ;
-		vec2 c = vec2(-0.01, -0.1) ;
-		float cycle = mod(u_time/1000.,2.*pi) ;
-		c = c + vec2(cos(cycle),sin(cycle))*.01 ;
-		float m = julia(coord, c);
-		vec3 rgb = 0.5 + 0.5*cos(3.0 + 0.15*m + vec3(0.0, 0.6, 2.));
-		gl_FragColor = vec4(rgb, 1.0);
-	}
-</script>
-
-<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/92/three.min.js'></script>
-<script src='https://cdn.rawgit.com/mrdoob/three.js/r92/examples/js/controls/OrbitControls.js'></script>
-<script  src="./script.js"></script>
+  <script src="script.js" type="module"></script>
 
 </body>
+
 </html>
