--- a/src/15-animation/dark-city/index.html
+++ b/src/15-animation/dark-city/index.html
@@ -4,16 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - ThreeJS x TweenMax example</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 </head>
 
 <body>
 
   <!-- https://codepen.io/MAKIO135/pen/vmBzMv -->
-  <div id="container"></div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-  <script src="script.js" type="module"></script>
+  <script src="main.js" type="module"></script>
 
 </body>
 
