--- a/src/15-animation/sine-wave-animation/index.html
+++ b/src/15-animation/sine-wave-animation/index.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Sine wave animation</title>
-  <link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<canvas></canvas>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js'></script><script  src="./script.js"></script>
+  <canvas></canvas>
+
+  <script src="/libs/dat.gui.min.js"></script>
+  <script src="main.js" type="module"></script>
 
 </body>
 </html>
