--- a/src/90-examples/dreaming-of-jupiter/index.html
+++ b/src/90-examples/dreaming-of-jupiter/index.html
@@ -13,7 +13,7 @@
   <!-- https://codepen.io/isladjan/pen/zYqLxeG -->
 
   <div id="container"></div>
-  <script src="script.js" type="module"></script>
+  <script src="main.js" type="module"></script>
 
 </body>
 
