--- a/src/90-examples/ProceduralTerrain_Part3/index.html
+++ b/src/90-examples/ProceduralTerrain_Part3/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="base.css">
 </head>
 <body>
-  <div id="target"></div>
+  <div id="container"></div>
   <script src="./src/main.js" type="module">
   </script>
 </body>
