--- a/src/90-examples/ProceduralTerrain_Part3/index.html
+++ b/src/90-examples/ProceduralTerrain_Part3/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Procedural Terrain</title>
-  <link rel="stylesheet" type="text/css" href="base.css">
 </head>
+
 <body>
+  <!-- simon dev -->
   <div id="container"></div>
-  <script src="./src/main.js" type="module">
-  </script>
+
+  <script src="./src/main.js" type="module"></script>
 </body>
+
 </html>
