--- a/src/90-examples/3D_MMORPG/client/index.html
+++ b/src/90-examples/3D_MMORPG/client/index.html
@@ -3,10 +3,8 @@
 
 <head>
   <title>SimonDev Crappy MMO</title>
-  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" type="text/css" href="base.css">
-  <!-- <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon+SC&display=swap" rel="stylesheet"> -->
 </head>
 
 <body>
