--- a/src/90-examples/offroadJS/index.html
+++ b/src/90-examples/offroadJS/index.html
@@ -13,7 +13,6 @@
   <aside id="instructions-container">
     <div id="instructions">
       <h1>Instructions</h1>
-      <i id="close-button">×</i>
       <p>
         Accelerate: <span>W</span> / <span>S</span>
       </p>
@@ -21,28 +20,19 @@
         Turn: <span>A</span> / <span>D</span>
       </p>
       <p>
-        Brake: <span>SpaceBar</span>
-      </p>
-      <p>
-        Lift vehicle: <span>H</span>
+        Brake: <span>Space</span>
       </p>
       <p>
         Reset vehicle: <span>R</span>
       </p>
       <p>
-        Switch camera mode: <span>C</span>
-      </p>
-      <p>
-        Move camera: <span>←</span> / <span>↑</span> / <span>→</span> / <span>↓</span> / mouse
+        Switch camera: <span>C</span>
       </p>
       <p>
         Pause: <span>P</span>
       </p>
       <p>
         Hide/Show instructions: <span>Esc</span>
-      </p>
-      <p>
-        Show wire frame: [type in the console 'showWireFrame']
       </p>
     </div>
   </aside>
