--- a/src/90-examples/offroadJS/index.html
+++ b/src/90-examples/offroadJS/index.html
@@ -37,7 +37,7 @@
     </div>
   </aside>
   
-  <script src="/libs/cannon.min.js"></script>
+  <script src="/libs/cannon.js"></script>
   <script src="main.js" type="module"></script>
 </body>
 
