--- a/src/90-examples/80-catapult/index.html
+++ b/src/90-examples/80-catapult/index.html
@@ -26,7 +26,7 @@
       document.getElementById("loading").innerHTML = "ready to go !"
     })
   </script>
-  <script src="lib/Cannon.js"></script>
+  <script src="/libs/cannon.js"></script>
   <script src="main.js" type="module"></script>
 
 </body>
