--- a/src/90-examples/racing-game/index.html
+++ b/src/90-examples/racing-game/index.html
@@ -141,7 +141,7 @@
   <script src="/node_modules/three127/build/three.min.js"></script>
   <script src="libs/inflate.min.js"></script>
   <script src="libs/FBXLoader.js"></script>
-  <script src="libs/cannon.min.js"></script>
+  <script src="/libs/cannon.js"></script>
   <script src="game.js" type="module"></script>
 
   <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
