--- a/src/45-terrain/50-real-world/index.html
+++ b/src/45-terrain/50-real-world/index.html
@@ -6,14 +6,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r49/Three.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r50/three.min.js"></script> -->
   <script src="js/ShaderTerrain.js"></script>
-  <script src="js/jquery-1.7.2.js"></script>
 </head>
 
 <body>
 
-  <div id="main_map"></div>
-
-  <script src="main.js"></script>
+  <script src="main.js" type="module"></script>
 </body>
 
 </html>
