--- a/src/90-examples/globe-terrain/index.html
+++ b/src/90-examples/globe-terrain/index.html
@@ -24,7 +24,7 @@
   <script src='./js/RTT_setup.js'></script>
   <script src="./js/ShaderLoader.min.js"></script>
 
-  <script src='./js/main.js'></script>
+  <script src='./js/main.js' type="module"></script>
 
 </body>
 
