--- a/src/90-examples/cannon-car/index.html
+++ b/src/90-examples/cannon-car/index.html
@@ -2,15 +2,9 @@
 <html>
 
 <head>
-  <title>Three.js TypeScript Tutorials by Sean Bradley : https://sbcode.net/threejs</title>
+  <title>Car physics</title>
   <meta name="author" content="Sean Bradley" />
-  <!-- <link rel="stylesheet" href="/stylesheets/style.css" /> -->
   <style>
-    body {
-      overflow: hidden;
-      margin: 0px;
-    }
-
     #instructions {
       color: white;
       position: absolute;
