--- a/src/90-examples/cannon-car-simple/index.html
+++ b/src/90-examples/cannon-car-simple/index.html
@@ -23,8 +23,8 @@
 
 <body>
 
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.js'></script>
+  <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.js'></script> -->
   <script src="main.js" type="module"></script>
 </body>
 
