--- a/src/90-examples/globe-terrain/index.html
+++ b/src/90-examples/globe-terrain/index.html
@@ -10,19 +10,9 @@
   <!-- https://github.com/meetar/globe-terrain -->
   <div id="globecontainer"></div>
 
-  <script data-src="./shaders/vs_rt.js" data-name="vs_rt" type="x-shader/x-vertex"></script>
-  <script data-src="./shaders/fs_erode.js" data-name="fs_erode" type="x-shader/x-fragment"></script>
-  <script data-src="./shaders/fs_dilate.js" data-name="fs_dilate" type="x-shader/x-fragment"></script>
-  <script data-src="./shaders/fs_maximum.js" data-name="fs_maximum" type="x-shader/x-fragment"></script>
-  <script data-src="./shaders/fs_rtt.js" data-name="fs_rtt" type="x-shader/x-fragment"></script>
-  <script data-src="./shaders/vs_main.js" data-name="vs_main" type="x-shader/x-vertex"></script>
-  <script data-src="./shaders/fs_main.js" data-name="fs_main" type="x-shader/x-fragment"></script>
-
-  <script src="./js/jquery-1.10.2.min.js"></script>
-  <script src="./js/three.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.69.0/three.min.js"></script>
   <script src="./js/TrackballControls2.js"></script>
   <script src='./js/RTT_setup.js'></script>
-  <script src="./js/ShaderLoader.min.js"></script>
 
   <script src='./js/main.js' type="module"></script>
 
