--- a/src/90-examples/globe/index.html
+++ b/src/90-examples/globe/index.html
@@ -2,33 +2,13 @@
 <html>
 
 <head>
-  <title>Three.js TypeScript Tutorials by Sean Bradley : https://sbcode.net/threejs</title>
-  <meta name="author" content="Sean Bradley" />
-  <!-- <link rel="stylesheet" href="/stylesheets/style.css" /> -->
-  <style>
-    body {
-      overflow: hidden;
-      margin: 0px;
-    }
-
-    #locationData {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      font-size: 14px;
-      font-family: monospace;
-      color: white;
-      pointer-events: none;
-      user-select: none;
-    }
-  </style>
+  <title>Three.js Globe</title>
 </head>
 
 <body>
 
   <!-- https://sbcode.net/threejs/globe/ -->
 
-  <div id="locationData"></div>
   <script src="main.js" type="module"></script>
 </body>
 
