--- a/src/90-examples/80-catapult/index.html
+++ b/src/90-examples/80-catapult/index.html
@@ -15,7 +15,7 @@
     A: shoot <br>
     C: change the camera<br>
   </div>
-  <div id="power"></div>
+  <input type="range" id="range" max="50">
   <div id="game"></div>
 
   <script src="main.js" type="module"></script>
