--- a/src/90-examples/80-catapult/index.html
+++ b/src/90-examples/80-catapult/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Catapult</title>
-  <link rel="stylesheet" href="main.css">
+  <!-- <link rel="stylesheet" href="main.css"> -->
 </head>
 
 <body>
@@ -16,7 +16,8 @@
     C: change the camera<br>
   </div>
   <input type="range" id="range" max="50">
-  <div id="game"></div>
+
+  <div id="msg"></div>
 
   <script src="main.js" type="module"></script>
 
