--- a/src/90-examples/80-catapult/index.html
+++ b/src/90-examples/80-catapult/index.html
@@ -11,8 +11,8 @@
   <!-- https://github.com/Sina-Ghiasi/Three.js-Catapult-Game -->
 
   <div id="instruction">
-    Space: start<br>
-    A: shoot <br>
+    R: restart<br>
+    Space: shoot <br>
     C: change the camera<br>
   </div>
   <input type="range" id="range" max="50">
