--- a/src/90-examples/simon-dev/01-procedural-terrain/index.html
+++ b/src/90-examples/simon-dev/01-procedural-terrain/index.html
@@ -9,7 +9,7 @@
   <!-- simon dev -->
   <div id="container"></div>
 
-  <script src="./src/main.js" type="module"></script>
+  <script src="main.js" type="module"></script>
 </body>
 
 </html>
