--- a/src/90-examples/astray-maze-game/index.html
+++ b/src/90-examples/astray-maze-game/index.html
@@ -29,10 +29,9 @@
     Level 1
   </div>
 
-  <script src='Box2dWeb.min.js'></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r99/three.min.js"></script>
 
-  <script src="game.js" type="module"></script>
+  <script src="main.js" type="module"></script>
 
 </body>
 
