--- a/src/90-examples/astray-maze-game/index.html
+++ b/src/90-examples/astray-maze-game/index.html
@@ -1,35 +1,12 @@
 <html>
 
 <head>
-  <style>
-    body {
-      background: black;
-      margin: 0;
-      padding: 0;
-      font-family: 'Helvetica';
-    }
-
-    #level {
-      position: absolute;
-      left: 0px;
-      top: 0px;
-      padding: 4px;
-      color: yellow;
-      font-weight: bold;
-    }
-  </style>
-
+  <title>Astray Maze Game</title>
 </head>
 
 <body>
 
   <!-- https://github.com/wwwtyro/Astray -->
-
-  <div id='level'>
-    Level 1
-  </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r99/three.min.js"></script>
 
   <script src="main.js" type="module"></script>
 
