--- a/src/35-mazes/circular-maze-2D/index.html
+++ b/src/35-mazes/circular-maze-2D/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Circular Maze Generator</title>
+  <title>Circular Maze Generator</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 
