--- a/src/35-mazes/circular-maze-3D/index.html
+++ b/src/35-mazes/circular-maze-3D/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Circular Maze Generator</title>
-  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
 
+  <script src="/node_modules/three127/build/three.js"></script>
+  <script src="libs/THREE.MeshLine.js"></script>
   <script src="main.js" type="module"></script>
 
 </body>
