--- a/src/25-shaders/toon-shading/index.html
+++ b/src/25-shaders/toon-shading/index.html
@@ -25,7 +25,7 @@
 
   <!-- https://github.com/hujiulong/toon-shading -->
 
-  <script src="./js/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r99/three.min.js"></script>
   <script src="./js/OrbitControls.js"></script>
   <script src='./js/TeapotBufferGeometry.js'></script>
 
