--- a/src/10-geometry/52-lava-avatar/index.html
+++ b/src/10-geometry/52-lava-avatar/index.html
@@ -10,6 +10,13 @@
 <body>
   <!-- https://threejs.org/examples/webgl_shader_lava.html -->
 
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script type="module" src="game.js"></script>
 </body>
 
