--- a/src/20-particles/60-fire/index.html
+++ b/src/20-particles/60-fire/index.html
@@ -9,7 +9,13 @@
 
   <div id="container"></div>
   <!-- http://127.0.0.1:8080/src/25-particles/70-fire/ -->
-
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script type="module" src="main.js"></script>
 
 </body>
