--- a/src/25-shaders/toon-material/index.html
+++ b/src/25-shaders/toon-material/index.html
@@ -11,6 +11,13 @@
 
   <!-- https://threejs.org/examples/webgl_materials_variations_toon -->
 
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script type="module" src="main.js"></script>
 
 </body>
