--- a/src/50-physics/80-demolition/index.html
+++ b/src/50-physics/80-demolition/index.html
@@ -9,7 +9,14 @@
 
   <div id="container"></div>
   <script src="/node_modules/three/examples/js/libs/ammo.wasm.js"></script>
-	<script type="module" src="main.js"></script>
+	  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
+  <script type="module" src="main.js"></script>
 
 </body>
 </html>
