--- a/src/60-models/40-horse/index.html
+++ b/src/60-models/40-horse/index.html
@@ -14,6 +14,13 @@
     model by <a href="http://mirada.com/">mirada</a> from <a href="http://ro.me">rome</a>
   </div> -->
 
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script type="module" src="game.js"></script>
 
 </body>
