--- a/src/60-models/42-birds/index.html
+++ b/src/60-models/42-birds/index.html
@@ -10,6 +10,13 @@
 <body>
   <!-- https://codesandbox.io/s/github/looeee/discoverthree.com-examples/tree/master/first-steps/7-load-models?from-embed -->
 
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script type="module" src="game.js"></script>
 </body>
 
