--- a/src/90-examples/30-endless-runner/index.html
+++ b/src/90-examples/30-endless-runner/index.html
@@ -23,6 +23,13 @@
 <!-- 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
   <script src="lib/OrbitControls.js"></script> -->
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script type="module" src="game.js"></script>
 </body>
 
