--- a/src/90-examples/45-fps-example/index.html
+++ b/src/90-examples/45-fps-example/index.html
@@ -8,6 +8,13 @@
 <body>
 
   <!-- https://threejs.org/examples/?q=fps#games_fps -->
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script type="module" src="game.js"></script>
 
 </body>
