--- a/src/25-shaders/70-droplets/index.html
+++ b/src/25-shaders/70-droplets/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
 
-    <script type="module" src="main.js"></script>
+      <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
+  <script type="module" src="main.js"></script>
   </body>
 </html>
