--- a/src/80-scenes/76-zeppelin/index.html
+++ b/src/80-scenes/76-zeppelin/index.html
@@ -11,6 +11,13 @@
 
 		
 		
-		<script type="module" src="game.js"></script>
+		  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
+  <script type="module" src="game.js"></script>
 	</body>
 </html>
