--- a/src/90-examples/nik-lever-pathfinding/dungeon/index.html
+++ b/src/90-examples/nik-lever-pathfinding/dungeon/index.html
@@ -16,6 +16,7 @@
         }
     }
   </script>
+  <script src="/libs/dat.gui.min.js"></script>
 	<script type="module" src="game.js"></script>
 </body>
 </html>
