--- a/src/90-examples/nik-lever-pathfinding/dungeon/index.html
+++ b/src/90-examples/nik-lever-pathfinding/dungeon/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Path-finding</title>
   <style>
-	body{ margin: 0; }
+    body {
+      margin: 0;
+    }
+    button {
+      position: absolute;
+    }
   </style>
 </head>
+
 <body>
+
+  <button id="camera">Switch camera</button>
+
   <script type="importmap">
     {
         "imports": {
@@ -16,7 +26,7 @@
         }
     }
   </script>
-  <script src="/libs/dat.gui.min.js"></script>
-	<script type="module" src="game.js"></script>
+  <script type="module" src="game.js"></script>
 </body>
+
 </html>
