--- a/src/90-examples/simon-dev/02-RPG/index.html
+++ b/src/90-examples/simon-dev/02-RPG/index.html
@@ -9,8 +9,6 @@
   <link href="https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon+SC&display=swap" rel="stylesheet">
 </head>
 <body>
-  <script src="./src/main.js" type="module">
-  </script>
   <div class="container" id="container">
     <div class="ui">
       <div class="quest-journal-layout">
@@ -130,5 +128,14 @@
       </div>
     </div>
   </div>
+
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
+  <script src="./src/main.js" type="module"></script>
 </body>
 </html>
