--- a/src/90-examples/simon-dev/03-MMORPG/client/index.html
+++ b/src/90-examples/simon-dev/03-MMORPG/client/index.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-
   <div class="container" id="container">
     <div class="ui" id="login-ui">
       <div class="login-screen">
@@ -140,6 +139,13 @@
     </div>
   </div>
 
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script src="./src/main.js" type="module"></script>
 </body>
 
