--- a/src/90-examples/model-lookat-cursor/index.html
+++ b/src/90-examples/model-lookat-cursor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Character Tutorial - Final</title>
+  <title>Character Tutorial</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 
