--- a/src/90-examples/model-lookat-cursor/index.html
+++ b/src/90-examples/model-lookat-cursor/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Character Tutorial</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>Character lookAt cursor</title>
 </head>
 
 <body>
