--- a/src/60-models/70-finite-state-machine/index.html
+++ b/src/60-models/70-finite-state-machine/index.html
@@ -6,6 +6,13 @@
 </head>
 <body>
   <!-- https://youtu.be/EkPfhzIbp2g -->
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script src="./main.js" type="module">
   </script>
 </body>
