--- a/src/25-shaders/52-psychedelic-waves/index.html
+++ b/src/25-shaders/52-psychedelic-waves/index.html
@@ -20,6 +20,13 @@
     </div>
   </div>
 
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script src="script.js" type="module"></script>
 
 </body>
