--- a/src/25-shaders/90-fractal-planet/index.html
+++ b/src/25-shaders/90-fractal-planet/index.html
@@ -12,6 +12,13 @@
 
   <div id="container"></div>
 
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script src="script.js" type="module"></script>
 
 </body>
