--- a/src/25-shaders/54-raging-sea/index.html
+++ b/src/25-shaders/54-raging-sea/index.html
@@ -9,6 +9,13 @@
 
 <body>
 
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script src="script.js" type="module"></script>
 
 </body>
