--- a/src/60-models/lowpoly-knight/index.html
+++ b/src/60-models/lowpoly-knight/index.html
@@ -33,6 +33,13 @@
     <button class="btn">die</button>
   </div>
 
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script src="script.js" type="module"></script>
 
 </body>
