--- a/src/15-animation/nik-lever-animation/index.html
+++ b/src/15-animation/nik-lever-animation/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>CodePen - H-OT - 3.5 - Complete</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<a id="camera-btn"><div>
-  <i class="fas fa-camera"></i>
-</div></a>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/105/three.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/2666677/CurveExtras.js'></script><script  src="./script.js"></script>
+
+  <!-- https://codepen.io/nik-lever/pen/ydvrVN -->
+
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
+
+  <script src="main.js" type="module"></script>
 
 </body>
+
 </html>
