--- a/examples/25-shaders/52-psychedelic-waves/index.html
+++ b/examples/25-shaders/52-psychedelic-waves/index.html
@@ -3,9 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Psychedelic waves</title>
+  <title>Psychedelic waves</title>
   <link rel="stylesheet" href="./style.css">
-
 </head>
 
 <body>
@@ -27,7 +26,7 @@
         }
     }
   </script>
-  <script src="script.js" type="module"></script>
+  <script src="main.js" type="module"></script>
 
 </body>
 
