--- a/examples/25-shaders/56-primordial-soup/index.html
+++ b/examples/25-shaders/56-primordial-soup/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - GLSL: Primordial Soup</title>
+  <title>Primordial Soup</title>
 </head>
+
 <body>
 
-<script  src="script.js" type="module"></script>
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
+  <script src="main.js" type="module"></script>
 
 </body>
+
 </html>
