--- a/examples/25-shaders/54-raging-sea/index.html
+++ b/examples/25-shaders/54-raging-sea/index.html
@@ -16,7 +16,7 @@
         }
     }
   </script>
-  <script src="script.js" type="module"></script>
+  <script src="main.js" type="module"></script>
 
 </body>
 
