--- a/examples/25-shaders/60-snowfall/index.html
+++ b/examples/25-shaders/60-snowfall/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Snowfall</title>
+  <title>Snowfall</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         }
     }
   </script>
-  <script src="script.js" type="module"></script>
+  <script src="main.js" type="module"></script>
 
 </body>
 
