--- a/examples/25-shaders/90-fractal-planet/index.html
+++ b/examples/25-shaders/90-fractal-planet/index.html
@@ -19,7 +19,7 @@
         }
     }
   </script>
-  <script src="script.js" type="module"></script>
+  <script src="main.js" type="module"></script>
 
 </body>
 
