--- a/examples/25-shaders/52-psychedelic-waves/index.html
+++ b/examples/25-shaders/52-psychedelic-waves/index.html
@@ -26,6 +26,7 @@
         }
     }
   </script>
+  <script src="/libs/shader-includes.js" type="module"></script>
   <script src="main.js" type="module"></script>
 
 </body>
