--- a/examples/25-shaders/62-ashfall/index.html
+++ b/examples/25-shaders/62-ashfall/index.html
@@ -15,6 +15,7 @@
         }
     }
   </script>
+  <script src="/libs/shader-includes.js" type="module"></script>
   <script src="main.js" type="module"></script>
 
 </body>
