--- a/examples/25-shaders/marble/index.html
+++ b/examples/25-shaders/marble/index.html
@@ -16,9 +16,17 @@
 		
 	</body>
 </html>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/2666677/MyShaderChunks.js'></script><script  src="./script.js"></script>
+
+<!-- https://codepen.io/nik-lever/pen/gEoaez -->
+<script type="importmap">
+  {
+      "imports": {
+          "three": "/node_modules/three/build/three.module.js"
+      }
+  }
+</script>
+<script src="/libs/shader-includes.js" type="module"></script>
+<script src="main.js" type="module"></script>
 
 </body>
 </html>
