--- a/examples/15-animation/20-sine-waves/index.html
+++ b/examples/15-animation/20-sine-waves/index.html
@@ -3,14 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Sine wave animation</title>
+  <title>THREE.js Animations</title>
 </head>
 
 <body>
 
-  <canvas></canvas>
-
-    <script type="importmap">
+  <script type="importmap">
     {
         "imports": {
             "three": "/node_modules/three/build/three.module.js"
