--- a/examples/15-animation/10-orbit/index.html
+++ b/examples/15-animation/10-orbit/index.html
@@ -8,9 +8,14 @@
 
 <body>
 
-  <canvas id="container"></canvas>
-
-  <script src="./script.js"></script>
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
+  <script src="main.js" type="module"></script>
 
 </body>
 
