--- a/examples/20-particles/50-explosion/index.html
+++ b/examples/20-particles/50-explosion/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 
-  <script src="/libs/dat.gui.min.js"></script>
-    <script type="importmap">
+  <h1 style="color:white; position:absolute">Click anywhere</h1>
+  
+  <script type="importmap">
     {
         "imports": {
             "three": "/node_modules/three/build/three.module.js"
