--- a/examples/90-games/Three.js_GuardedCastle/index.html
+++ b/examples/90-games/Three.js_GuardedCastle/index.html
@@ -18,12 +18,10 @@
 
   <div id="WebGL-output"></div>
 
-  <script type="text/javascript" src="libs/three.js"></script>
-  <script type="text/javascript" src="libs/jquery-1.9.0.js"></script>
-  <script type="text/javascript" src="libs/stats.js"></script>
-  <script type="text/javascript" src="libs/dat.gui.js"></script>
-  <script type="text/javascript" src="libs/TrackballControls.js"></script>
-  <script type="text/javascript" src="libs/ThreeCSG.js"></script>
+  <script src="/libs/dat.gui.min.js"></script>
+  <script src="libs/three.js"></script>
+  <script src="libs/TrackballControls.js"></script>
+  <script src="libs/ThreeCSG.js"></script>
 
   <script src="main.js" type="module"></script>
 </body>
