--- a/examples/45-terrain/10-random-terrain/index.html
+++ b/examples/45-terrain/10-random-terrain/index.html
@@ -3,15 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Dreaming of Jupiter - Three.js</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Terrain</title>
 </head>
 
 <body>
-  <!-- https://codepen.io/isladjan/pen/zYqLxeG -->
 
-  <div id="container"></div>
-    <script type="importmap">
+  <script type="importmap">
     {
         "imports": {
             "three": "/node_modules/three/build/three.module.js"
