--- a/examples/90-games/saturn/index.html
+++ b/examples/90-games/saturn/index.html
@@ -3,24 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Catapult</title>
-  <style>
-    #ui {
-      position: absolute;
-    }
-  </style>
+  <title>Saturn</title>
 </head>
 
 <body>
-  <!-- https://github.com/Sina-Ghiasi/Three.js-Catapult-Game -->
 
-  <div id="ui">
-    R: restart<br>
-    Space: shoot <br>
-    C: change the camera<br>
-    <div id="msg"></div>
-  </div>
-
+  <!-- https://codepen.io/Ozubergs/pen/GRZYERB -->
   <script type="importmap">
     {
         "imports": {
