--- a/examples/90-games/Endless-City/index.html
+++ b/examples/90-games/Endless-City/index.html
@@ -2,37 +2,36 @@
 <html lang="en">
 
 <head>
-    <title>Endless City</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
+  <title>Endless City</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
 </head>
 
 <body>
-    <canvas></canvas>
+  <canvas></canvas>
 
-    <div class="load">
-        <div class="lds-roller">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <p></p>
-        </div>
+  <div class="load">
+    <div class="lds-roller">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <p></p>
     </div>
+  </div>
+
+  <script src="libs/three.js"></script>
+  <script src="libs/MapControls.js"></script>
+  <script src="libs/inflate.min.js"></script>
+  <script src="libs/GLTFLoader.js"></script>
+  <script src="main.js" type="module"></script>
 
 </body>
-
-<script type="text/javascript" src="js/three.js"></script>
-<script type="text/javascript" src="js/MapControls.js"></script>
-<script type="text/javascript" src="js/inflate.min.js"></script>
-<script type="text/javascript" src="js/stats.min.js"></script>
-<script type="text/javascript" src="js/GLTFLoader.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
 
 </html>
