--- a/examples/90-games/Endless-City/index.html
+++ b/examples/90-games/Endless-City/index.html
@@ -4,27 +4,12 @@
 <head>
   <title>Endless City</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
+  <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
-  <canvas></canvas>
 
-  <div class="load">
-    <div class="lds-roller">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <p></p>
-    </div>
-  </div>
+  <canvas></canvas>
 
   <script src="libs/three.js"></script>
   <script src="libs/MapControls.js"></script>
