--- a/examples/35-mazes/30-maze-generation/index.html
+++ b/examples/35-mazes/30-maze-generation/index.html
@@ -1,7 +1,12 @@
 <html>
 
 <head>
-  <title>Astray Maze Game</title>
+  <title>Mazes</title>
+  <style>
+    body {
+      background: black
+    }
+  </style>
 </head>
 
 <body>
@@ -13,8 +18,7 @@
         }
     }
   </script>
-  <script src="main.js" type="module"></script>
-
+  <script src="game.js" type=module></script>
 </body>
 
 </html>
