--- a/examples/35-mazes/20-render-3d-map/index.html
+++ b/examples/35-mazes/20-render-3d-map/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mazes</title>
+</head>
+<body>
+  
   <script type="importmap">
     {
         "imports": {
@@ -6,3 +15,6 @@
     }
   </script>
   <script src="game.js" type="module"></script>
+
+</body>
+</html>
