--- a/examples/35-mazes/35-procedural-maze/index.html
+++ b/examples/35-mazes/35-procedural-maze/index.html
@@ -1,3 +1,11 @@
+<html>
+
+<head>
+  <title>Mazes</title>
+</head>
+
+<body>
+
   <script type="importmap">
     {
         "imports": {
@@ -5,4 +13,8 @@
         }
     }
   </script>
-  <script src="game.js" type="module"></script>
+  <script src="main.js" type="module"></script>
+
+</body>
+
+</html>
