--- a/examples/35-mazes/30-prims-algorithm/index.html
+++ b/examples/35-mazes/30-prims-algorithm/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Mazes: Prim's Algorithm</title>
+  <title>Prim's Algorithm</title>
   <style>
     body {
       background: black
