--- a/examples/36-mazes-for-programmers/ch02_01_binary_tree_demo/index.html
+++ b/examples/36-mazes-for-programmers/ch02_01_binary_tree_demo/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Circular Maze</title>
+	<title>Mazes For Programmers - Chapter 2</title>
 </head>
-
 <body>
+	<canvas id='output'></canvas>
 
   <script type="importmap">
     {
@@ -15,8 +13,6 @@
         }
     }
   </script>
-  <script src="main.js" type="module"></script>
-
+	<script src="main.js" type="module"></script>
 </body>
-
 </html>
