--- a/examples/36-mazes-for-programmers/ch02_01_binary_tree/index.html
+++ b/examples/36-mazes-for-programmers/ch02_01_binary_tree/index.html
@@ -4,8 +4,14 @@
 	<title>Mazes For Programmers - Chapter 2</title>
 </head>
 <body>
-	<canvas id='output'></canvas>
 
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
 	<script src="main.js" type="module"></script>
 </body>
 </html>
