--- a/examples/36-mazes-for-programmers/ch03_01_dijkstra/index.html
+++ b/examples/36-mazes-for-programmers/ch03_01_dijkstra/index.html
@@ -2,15 +2,16 @@
 <html>
 <head>
 	<title>Mazes For Programmers - Chapter 3</title>
-	<style>
-		canvas {
-			image-rendering: pixelated;
-		}
-	</style>
 </head>
 <body>
-	<canvas id='output'></canvas>
 
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
 	<script src="main.js" type="module"></script>
 </body>
 </html>
