--- a/examples/36-mazes-for-programmers/ch11_02_prims_true/index.html
+++ b/examples/36-mazes-for-programmers/ch11_02_prims_true/index.html
@@ -4,11 +4,14 @@
 	<title>Mazes For Programmers - Chapter 11</title>
 </head>
 <body>
-	<canvas id='output1'></canvas>
-	<canvas id='output2'></canvas>
-	<canvas id='output3'></canvas>
 
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script src='main.js' type="module"></script>
-
 </body>
 </html>
