--- a/examples/36-mazes-for-programmers/ch12_01_ellers/index.html
+++ b/examples/36-mazes-for-programmers/ch12_01_ellers/index.html
@@ -9,8 +9,14 @@
 	</style>
 </head>
 <body>
-	<canvas id='output'></canvas>
 
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script src='main.js' type="module"></script>
 </body>
 </html>
