--- a/examples/30-player/20-first-person-camera/index.html
+++ b/examples/30-player/20-first-person-camera/index.html
@@ -2,27 +2,20 @@
 <html lang="en">
 
 <head>
-	<title>Chase Camera (Three.js)</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
+  <meta charset="UTF-8">
+  <title>Player</title>
 </head>
 
 <body>
 
-	<ul>
-		<li>W/S: Translate Forward/Backward
-		<li>A/D: Rotate Left/Right
-		<li>Q/E: Translate Left/Right
-	</ul>
-
-	  <script type="importmap">
+    <script type="importmap">
     {
         "imports": {
             "three": "/node_modules/three/build/three.module.js"
         }
     }
   </script>
-  <script src="main.js" type="module"></script>
+  <script src="game.js" type="module"></script>
 </body>
 
 </html>
