--- a/examples/60-models/72-capoeira-girl/index.html
+++ b/examples/60-models/72-capoeira-girl/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Character Controller</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <style>
+    #move {
+      position: absolute;
+      text-align: center;
+      left: 0;
+      right: 0;
+      margin-top: 80px;
+    }
+  </style>
 </head>
+
 <body>
-  <!-- https://youtu.be/EkPfhzIbp2g -->
+
+  <h1 id="move"></h1>
+
   <script type="importmap">
     {
         "imports": {
@@ -16,4 +29,5 @@
   <script src="./main.js" type="module">
   </script>
 </body>
+
 </html>
