--- a/examples/60-models/72-capoeira-girl/index.html
+++ b/examples/60-models/72-capoeira-girl/index.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <style>
     #move {
-      position: absolute;
-      text-align: center;
+      font-size: 50px;
       left: 0;
-      right: 0;
       margin-top: 80px;
+      position: absolute;
+      right: 0;
+      text-align: center;
     }
   </style>
 </head>
