--- a/examples/60-models/72-capoeira-girl/index.html
+++ b/examples/60-models/72-capoeira-girl/index.html
@@ -8,10 +8,11 @@
     #move {
       font-size: 50px;
       left: 0;
-      margin-top: 80px;
+      margin-top: 70px;
       position: absolute;
       right: 0;
       text-align: center;
+      color: white;
     }
   </style>
 </head>
