--- a/examples/60-models/72-capoeira-girl/index.html
+++ b/examples/60-models/72-capoeira-girl/index.html
@@ -14,12 +14,19 @@
       text-align: center;
       color: white;
     }
+
+    #switch {
+      position: absolute;
+      right: 8px;
+    }
   </style>
 </head>
 
 <body>
 
   <h1 id="move"></h1>
+
+<label id="switch"><input id="checkbox" type="checkbox"> Autoplay</label>
 
   <script type="importmap">
     {
