--- a/examples/60-models/72-capoeira-girl/index.html
+++ b/examples/60-models/72-capoeira-girl/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Character Controller</title>
+  <title>Capoeira girl</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <style>
     #move {
@@ -36,12 +36,21 @@
       position: absolute;
       right: 8px;
     }
+
+    #preloader {
+      position: absolute;
+      top: 200px;
+      left: 50%;
+      margin-left: -50px;
+    }
   </style>
 </head>
 
 <body>
 
   <h1 id="move"></h1>
+
+  <img id="preloader" src="loading.gif">
 
   <label id="switch"><input id="checkbox" type="checkbox"> Autoplay</label>
 
