--- a/examples/60-models/72-capoeira-girl/index.html
+++ b/examples/60-models/72-capoeira-girl/index.html
@@ -5,11 +5,14 @@
   <title>Capoeira girl</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <style>
+    body {
+      overflow: hidden;
+    }
     #move {
       color: white;
       font-size: 50px;
       left: 0;
-      margin-top: 70px;
+      margin-top: 5%;
       position: absolute;
       right: 0;
       text-align: center;
@@ -21,6 +24,7 @@
       display: flex;
       position: absolute;
       right: 8px;
+      top: 4px;
     }
 
     #checkbox {
@@ -30,7 +34,7 @@
 
     #camera {
       background: transparent;
-      bottom: 0;
+      bottom: 8px;
       cursor: pointer;
       font-size: 22px;
       position: absolute;
