--- a/examples/60-models/72-capoeira-girl/index.html
+++ b/examples/60-models/72-capoeira-girl/index.html
@@ -56,7 +56,7 @@
 
   <img id="preloader" src="loading.gif">
 
-  <label id="switch"><input id="checkbox" type="checkbox"> Autoplay</label>
+  <label id="switch"><input id="checkbox" type="checkbox"> Random moves</label>
 
   <button id="camera">📷</button>
 
