--- a/examples/60-models/72-capoeira-girl-copy/index.html
+++ b/examples/60-models/72-capoeira-girl-copy/index.html
@@ -6,9 +6,11 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <style>
     body {
+      background: #87CEEB;
       margin: 0;
       overflow: hidden;
     }
+
     #move {
       color: white;
       font-size: 50px;
