--- a/examples/90-games/flag/index.html
+++ b/examples/90-games/flag/index.html
@@ -8,9 +8,17 @@
 
 <body>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r124/three.min.js"></script>
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js",
+            "three-pathfinding": "/node_modules/three-pathfinding/dist/three-pathfinding.module.js"
+        }
+    }
+  </script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r124/three.min.js"></script> -->
   <!-- https://github.com/a-jie/threejs-geometry-modifiers -->
-  <script src="http://baronwatts.com/scripts/modifier.js"></script>
+  <!-- <script src="https://raw.githubusercontent.com/drawcall/threejs-mesh-modifiers/master/dist/modifiers.min.js"></script> -->
  
   <script src="main.js" type="module"></script>
 </body>
