--- a/examples/90-games/first-person-shooter/index.html
+++ b/examples/90-games/first-person-shooter/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Three JS - First person shooter</title>
+  <title>First person shooter</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 
