--- a/examples/95-shadows/dir-light-follows/index.html
+++ b/examples/95-shadows/dir-light-follows/index.html
@@ -3,19 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Shadow Maps (ThreeJs)</title>
-  <meta charset=utf-8>
-  <title>Basic Scene</title>
-  <style>
-    body {
-      margin: 0;
-    }
-
-    canvas {
-      width: 100%;
-      height: 100%
-    }
-  </style>
+  <title>CodePen - Shadow (w/ Three.js)</title>
 </head>
 
 <body>
@@ -27,7 +15,7 @@
         }
     }
   </script>
-  <script type="module" src="main.js"></script>
+  <script src="main.js" type="module"></script>
 
 </body>
 
