--- a/examples/90-games/AStar_60000/index.html
+++ b/examples/90-games/AStar_60000/index.html
@@ -10,6 +10,13 @@
 <body>
   <div id="target"></div>
 
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js"
+        }
+    }
+  </script>
   <script src="https://github.com/mrdoob/three.js/blob/r112/build/three.module.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/buckets-js/dist/buckets.min.js"></script>
   <script src="main.js" type="module"></script>
