--- a/examples/50-physics/racing-game/index.html
+++ b/examples/50-physics/racing-game/index.html
@@ -36,8 +36,7 @@
   <link rel="icon" href="car3.png" type="image/png" />
 </head>
 
-<body style="background-image:url('loading.webp');background-repeat:no-repeat;background-size:cover;">
-
+<body>
   <!-- GAME: http://moygen.rf.gd/world/world.htm -->
 
   <script>
@@ -60,7 +59,6 @@
   <script src="ammo.asm.js"></script><!-- bullet physics ported to javascript -->
   <script src="three3.js"></script><!-- 3d rendering library for javascript -->
   <script src="stats.min.js"></script><!-- frames per second and memory usage info -->
-  <script src="Detector.js"></script><!-- message for browsers without webgl -->
   <script src="MTLLoader.js"></script><!-- material loader -->
   <script src="OBJLoader.js"></script><!-- .obj model loader -->
   <script src="dat.gui.js"></script><!-- user interface -->
