--- a/examples/50-physics/racing-game/index.html
+++ b/examples/50-physics/racing-game/index.html
@@ -61,7 +61,7 @@
   <script src="main.js"></script>
 
   <div id="opener"
-    style="visibility:hidden;padding-left:6px;padding-bottom:2px;margin:2px;width:20px;height:20px;border:1px solid black;z-index:100002;position:fixed;bottom:0px;left:0px;color:black;background-color:white;font-family:monospace;font-size:20px;font-weight:bold;opacity:.5;cursor:pointer;"
+    style="padding-left:6px;padding-bottom:2px;margin:2px;width:20px;height:20px;border:1px solid black;z-index:100002;position:fixed;bottom:0px;left:0px;color:black;background-color:white;font-family:monospace;font-size:20px;font-weight:bold;opacity:.5;cursor:pointer;"
     onclick="menuSwitch();">?</div>
 
   <div id="mui"
